// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Icon AriaHidden smoke-test 1`] = `
<span aria-hidden="true"
      role="presentation"
      class=" material-icons  gi-block 24px"
      style="font-size: 24px;"
>
  thumb_up
</span>
`;

exports[`components/Icon AriaLabel smoke-test 1`] = `
<span aria-label="Thumbs up"
      role="img"
      class=" material-icons  gi-block 24px"
      style="font-size: 24px;"
>
  thumb_up
</span>
`;

exports[`components/Icon Default smoke-test 1`] = `
<span role="presentation"
      class=" material-icons  gi-block 24px"
      style="font-size: 24px;"
>
  thumb_up
</span>
`;

exports[`components/Icon ExtraLarge smoke-test 1`] = `
<span role="presentation"
      class=" material-icons  gi-block 48px"
      style="font-size: 48px;"
>
  thumb_up
</span>
`;

exports[`components/Icon Large smoke-test 1`] = `
<span role="presentation"
      class=" material-icons  gi-block 32px"
      style="font-size: 32px;"
>
  thumb_up
</span>
`;

exports[`components/Icon Outlined smoke-test 1`] = `
<span role="presentation"
      class=" material-icons-outlined  gi-block 24px"
      style="font-size: 24px;"
>
  thumb_up
</span>
`;

exports[`components/Icon Small smoke-test 1`] = `
<span role="presentation"
      class=" material-icons  gi-block 16px"
      style="font-size: 16px;"
>
  thumb_up
</span>
`;
